fix: :lipstick: remove boader radius from search on iOS

--- a/public/resources/scss/index.scss
+++ b/public/resources/scss/index.scss
@@ -2946,6 +2946,7 @@ main.grid {
             color: white;
             font-weight: normal;
             -webkit-appearance: none;
+            border-radius: 0;
 
             &::-webkit-search-cancel-button {
                 position: absolute;
